# fffx

./: .gitignore  Cargo.toml  README.md
benches/: parse_fasta.rs
fuzz/: Cargo.toml
fuzz/coverage/parse_fasta/: coverage.profdata
fuzz/coverage/parse_fasta/raw/: default-00626fe4d3726b580606377350cb9c75ec34ee9c.profraw  default-008fbd2d733cd4ccafe2548789e64e9c6ad41772.profraw  default-00928645952a7f1ec16c93b6f8103e664a54daa4.profraw  default-00c9d06ef68d131bb658052ce3b9a2556e400195.profraw  default-01191f021c5040a09934b63eeda218e989b97b69.profraw  default-012db949f92c8ed10648e3cdae3271a4dab978ab.profraw  default-0132903d838130158c00addd906de25fe0148911.profraw  default-0152a1207325afc23d296eed2fc36366d927faba.profraw  default-017f25ac3bf727aa3bc7c21de2bb252a73a27e2f.profraw  default-018db535de6ae33e974350390619ed743be984f9.profraw  default-01ab41c4bf9ed679a75c0bb84372bfa5d7e2b148.profraw  default-01b9d677eefddca0bc5913ed2247e80784f2139e.profraw  default-01bcb6a99ee2fb172e4e950ba061d3ebf343c329.profraw  default-01c4f524a23f4a941240fb975e9347f910aad883.profraw  default-01daf3d712e706f196aa9540301bef0470a9f155.profraw  default-0210a1cd03817e5f2f71ed6521f30ee12af5f798.profraw  default-021fecada2c2a4536a3a37ba14fc653a1b195041.profraw  default-0231b43e4c43d68f8e4b63d2034580188b0cc97d.profraw  default-02502e44b78ba8215fe21c0092a2210e8e53aef4.profraw  default-025d197e480d9a167721d065d450036ff1b5ce57.profraw  (+2483 more)
fuzz/coverage/parse_fastq/: coverage.profdata
fuzz/fuzz_targets/: parse_fasta.rs  parse_fastq.rs
src/: lib.rs  utils.rs
src/zerocopy/: fasta.rs
(+523 files in other folders)
